[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "centerfield-visitor-mcp"
version = "0.1.0"
description = "MCP server for Centerfield building visitor reservation"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Hyunmin Kim" }
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.4.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "openpyxl>=3.1.5",
]

[project.scripts]
centerfield-visitor-mcp = "centerfield_visitor_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["centerfield_visitor_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "centerfield_visitor_mcp/**",
    "pyproject.toml",
    "LICENSE",
]
